# SPAN

./: AudioVisualizer.h  ButterworthFilter.h  CMakeLists.txt  GestureTemplate.h  GestureTemplateManager.cpp  KinematicVisualizer.cpp  KinematicVisualizer.h  LICENSE.txt  MyQCPItemText.h  OptionManager.cpp  QRangeSlider.cpp  QRangeSlider.h  README.md.txt  README.txt  Sensor3DVisualizer.cpp  Sensor3DVisualizer.h  SensorData.h  SpanIO.cpp  Sweep.cpp  UtilityFunctions.cpp  app.rc  deploy.sh  dr_wav.h  label.cpp  main.cpp  mainWindow.h  preprocessingWindow.cpp  resources.qrc
src/: AudioVisualizer.cpp  ButterworthFilter.cpp  FileInfoDialog.cpp  FileInfoDialog.h  GestureTemplateManager.h  KinematicVisualizer.cpp  KinematicVisualizer.h  OptionManager.h  SignalProcessing.cpp  SignalProcessing.h  SpanIO.h  Sweep.h  UtilityFunctions.h  label.cpp  label.h  mainWindow.cpp  mainWindow.h  preprocessingWindow.h  preprocessingWindow.ui  spanFile.h
src/ui/: FileInfoDialog.ui  mainWindow.ui
